package com.ben.abstractnotification;

public class AndroidPhone extends Phone{

    @Override
    public String getRam() {
        return "12GB";
    }

    @Override
    public String getOperatingSystem() {
        return "Android Phone";
    }

}
