package com.ben.abstractnotification;

public class ApplePhone extends Phone{

    @Override
    public String getRam() {
        return "16GB";
    }

    @Override
    public String getOperatingSystem() {
        return "Apple Phone";
    }

}
