package com.ben.abstractnotification;

abstract class Phone {
    public abstract String getRam();

    public abstract String getOperatingSystem();
}
